--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@ font-family:'Roboto', sans-serif;
 </style>
 </head>
 <body class="grey lighten-5">
+<header>
+  <nav>
+    <div class="nav-wrapper blue">
+      <a href="#!" class="brand-logo"><img class="responsive-img" width="300px" style="position:relative;top:15	px;left:2px" height="auto" src="logo.png"></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="sass.html">Sass</a></li>
+    <li><a href="badges.html">Components</a></li>
+    <li><a href="collapsible.html">Javascript</a></li>
+    <li><a href="mobile.html">Mobile</a></li>
+  </ul>
+</header>
 <div class="row">
 <div class="center">
 <h5 class="blue-text">It's Me Rags Codemaster</h5>
