--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@ font-family:'Roboto', sans-serif;
 <header>
   <nav>
     <div class="nav-wrapper blue">
-      <a href="#!" class="brand-logo"><img class="responsive-img" width="300px" style="position:relative;top:15	px;left:2px" height="auto" src="logo.png"></a>
+      <a href="#!" class="brand-logo"><img class="responsive-img" width="300px" style="position:relative;top:15px;left:2px" height="auto" src="logo.png"></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
+<!--       <ul class="right hide-on-med-and-down">
         <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
         <li><a href="collapsible.html">Javascript</a></li>
         <li><a href="mobile.html">Mobile</a></li>
-      </ul>
+      </ul> -->
     </div>
   </nav>
 
